<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>groupId</groupId>
    <artifactId>CoreJavaBootCamp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <name>corejava</name>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
    <dependency>
        <groupId>com.googlecode.json-simple</groupId>
        <artifactId>json-simple</artifactId>
        <version>1.1.1</version>
    </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.testng</groupId>
            <artifactId>testng</artifactId>
            <version>6.8.5</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    <build>
    <plugins>
        <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <version>3.11.0</version>
            <configuration>
                <source>21</source>
                <target>21</target>
            </configuration>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-javadoc-plugin</artifactId>
            <version>3.11.2</version>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-war-plugin</artifactId>
            <configuration>
                <packagingExcludes>WEB-INF/lib/*slf4j-nop*.jar</packagingExcludes>
                <archive>
                    <manifest>
                        <addClasspath>true</addClasspath>
                        <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                    </manifest>
                    <manifestEntries>
                        <Build-Maven>${version}</Build-Maven>
                        <Build-Commons>${virtual-card-commons.version}</Build-Commons>
                    </manifestEntries>
                </archive>
                <outputDirectory>${basedir}/deployments</outputDirectory>
                <warName>vpayCore</warName>
            </configuration>
        </plugin>
        <plugin>
            <artifactId>maven-resources-plugin</artifactId>
            <version>2.6</version>
            <executions>
                <execution>
                    <id>copy-war</id>
                    <phase>package</phase>
                    <goals>
                        <goal>copy-resources</goal>
                    </goals>
                    <configuration>
                        <encoding>UTF-8</encoding>
                        <outputDirectory>${basedir}/target/appBundle/dependencies/javarajboss/deployments
                        </outputDirectory>
                        <resources>
                            <resource>
                                <directory>deployments</directory>
                                <filtering>false</filtering>
                                <excludes>
                                    <exclude>**/.gitkeep</exclude>
                                </excludes>
                            </resource>
                        </resources>
                    </configuration>
                </execution>
                <execution>
                    <id>copy-config</id>
                    <phase>package</phase>
                    <goals>
                        <goal>copy-resources</goal>
                    </goals>
                    <configuration>
                        <outputDirectory>${basedir}/target/appBundle/repo/.openshift</outputDirectory>
                        <resources>
                            <resource>
                                <directory>.openshift</directory>
                                <filtering>false</filtering>
                            </resource>
                        </resources>
                    </configuration>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <artifactId>maven-assembly-plugin</artifactId>
            <version>2.4</version>
            <executions>
                <execution>
                    <id>dist</id>
                    <phase>package</phase>
                    <goals>
                        <goal>single</goal>
                    </goals>
                    <configuration>
                        <descriptors>
                            <descriptor>${basedir}/assembly.xml</descriptor>
                        </descriptors>
                    </configuration>
                </execution>
            </executions>
        </plugin>
        <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
                <source>21</source>
                <target>21</target>
                <compilerArgs>--enable-preview</compilerArgs>
            </configuration>
        </plugin>
        <!--        <plugin>-->
<!--            <groupId>io.swagger.core.v3</groupId>-->
<!--            <artifactId>swagger-maven-plugin</artifactId>-->
<!--            <version>2.2.28</version>-->
<!--            <configuration>-->
<!--                <outputFileName>vpaycore</outputFileName>-->
<!--                <outputPath>.amex/</outputPath>-->
<!--                <outputFormat>YAML</outputFormat>-->
<!--&lt;!&ndash;                <configurationFilePath>src/main/resources/openapi-configuration.yaml</configurationFilePath>&ndash;&gt;-->
<!--                <filterClass>com.americanexpress.config.SpecFilter</filterClass>-->
<!--            </configuration>-->
<!--            <executions>-->
<!--                <execution>-->
<!--                    <phase>compile</phase>-->
<!--                    <goals>-->
<!--                        <goal>resolve</goal>-->
<!--                    </goals>-->
<!--                </execution>-->
<!--            </executions>-->
<!--        </plugin>-->
    </plugins>
    </build>
</project>